fixed login/signup link spacing

--- a/loginStyle.css
+++ b/loginStyle.css
@@ -18,9 +18,9 @@ body{
 
 p{
   	display: inline;
-	
-}
 
+}
+4
 h2 {
 	font-family: 'Rambla', sans-serif;
 	text-align: center;
@@ -40,8 +40,8 @@ h2 {
 }
 
 #logo{
-  	margin-left: 44%;
-  	margin-right: 30%;
+  	margin-left: 41%;
+  	margin-right: 25%;
   	font-size: 300%;
   	text-align: center;
   	color: white;
